# BasicPresenter

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  Controller.cpp  Controller.hpp  PdfViewer.cpp  PdfViewer.hpp  main.cpp
